--- a/H753ZIT6TemplateRepository.ioc
+++ b/H753ZIT6TemplateRepository.ioc
@@ -24,21 +24,24 @@ Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=UART4
-Mcu.IPNb=8
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32H753ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin2=VP_CRC_VS_CRC
-Mcu.Pin3=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin4=VP_SYS_VS_tim2
-Mcu.Pin5=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=6
+Mcu.Pin2=PD5
+Mcu.Pin3=PD6
+Mcu.Pin4=VP_CRC_VS_CRC
+Mcu.Pin5=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin6=VP_SYS_VS_tim2
+Mcu.Pin7=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753ZITx
-MxCube.Version=6.12.1
-MxDb.Version=DB.6.0.121
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -56,14 +59,22 @@ NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM2_IRQn
 NVIC.TimeBaseIP=TIM2
 NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.Mode=Asynchronous
 PA0.Signal=UART4_TX
 PA1.Mode=Asynchronous
 PA1.Signal=UART4_RX
+PD5.Locked=true
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Locked=true
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -71,7 +82,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H753ZITx
-ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.2
+ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -92,7 +103,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_UART4_Init-UART4-false-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_UART4_Init-UART4-false-LL-true,5-MX_USART2_UART_Init-USART2-false-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
@@ -160,6 +171,8 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=2000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
