--- a/H753ZIT6TemplateRepository.ioc
+++ b/H753ZIT6TemplateRepository.ioc
@@ -18,6 +18,7 @@ Mcu.CPN=STM32H753ZIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=CRC
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=MEMORYMAP
 Mcu.IP4=NVIC
@@ -25,18 +26,22 @@ Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=UART4
 Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=11
 Mcu.Name=STM32H753ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin2=PD5
-Mcu.Pin3=PD6
-Mcu.Pin4=VP_CRC_VS_CRC
-Mcu.Pin5=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin6=VP_SYS_VS_tim2
-Mcu.Pin7=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=8
+Mcu.Pin10=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin2=PA11
+Mcu.Pin3=PA12
+Mcu.Pin4=PD5
+Mcu.Pin5=PD6
+Mcu.Pin6=VP_CRC_VS_CRC
+Mcu.Pin7=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin8=VP_SYS_VS_tim2
+Mcu.Pin9=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753ZITx
@@ -48,6 +53,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -65,6 +71,10 @@ PA0.Mode=Asynchronous
 PA0.Signal=UART4_TX
 PA1.Mode=Asynchronous
 PA1.Signal=UART4_RX
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PD5.Locked=true
 PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
@@ -103,7 +113,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_UART4_Init-UART4-false-LL-true,5-MX_USART2_UART_Init-USART2-false-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_UART4_Init-UART4-false-LL-true,5-MX_USART2_UART_Init-USART2-false-LL-true,6-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
@@ -137,7 +147,7 @@ RCC.HCLKFreq_Value=64000000
 RCC.HRTIMFreq_Value=64000000
 RCC.I2C123Freq_Value=32000000
 RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLSource,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=64000000
 RCC.LPTIM345Freq_Value=64000000
@@ -145,6 +155,8 @@ RCC.LPUART1Freq_Value=64000000
 RCC.LTDCFreq_Value=129000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=64000000
+RCC.PLLSource=RCC_PLLSOURCE_HSI
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
 RCC.QSPIFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
@@ -173,6 +185,12 @@ RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=MSC
+USB_DEVICE.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode-MSC_FS=Msc
+USB_DEVICE.VirtualModeFS=Msc_FS
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
@@ -181,6 +199,8 @@ VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_tim2.Mode=TIM2
 VP_SYS_VS_tim2.Signal=SYS_VS_tim2
+VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_FS
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
